--- a/index.html
+++ b/index.html
@@ -25,12 +25,10 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Acerca</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#masinfo">Más Info</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#english">English</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#lettering">Lettering</a></li>
                 </ul>
             </div>
         </nav>
@@ -42,39 +40,48 @@
                     <h1 class="mb-0">
                         <span class="text-primary"> Ingrid Olea</span>
                     </h1>
+                    <!--
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        I'm an engineer, math teacher and public servant, working at the intersection of education, public policy and technology ·
+                        <a href="mailto:ingrid_olea@hks.harvard.edu">ingrid_olea@hks.harvard.edu</a>
                     </div>
+                    -->
                     <p class="lead mb-5">I'm an engineer, math teacher and public servant, working at the intersection of education, public policy and technology, to expand opportunities for all children. I'm graduating from the Harvard Kennedy School in May 2020 and searching for my next destination.</p>
-                    <div class="social-icons">
-
-
-<!--
-                        <a rel="me" href="mailto:ingrid_olea@hks.harvard.edu" title="email">
-                        <span class="fas fa-envelope"></span>
-                    </a><a rel="me" href="https://www.linkedin.com/in/ingrid-olea/" title="LinkedIn">
-                        <span class="fab fa-linkedin"></span>
-                    </a><a rel="me" href="https://twitter.com/ingridelena/" title="Twitter">
-                        <span class="fab fa-twitter"></span>
-                    </a><a rel="me" href="https://github.com/ingridolea" title="Github">
-                        <span class="fab fa-github"></span>
-                    </a><a rel="me" href="images/Olea_Ingrid_Resume_250120.pdf" title="CV">
-                        <span class="fas fa-file-pdf"></span>
-                    </a><a rel="me" href="#info" title="Additional information">
-                        <span class="fas fa-info-circle"></span>
-                    </a>
--->
-
-
+                    <div class="social-icons"
+                        <a class="social-icon" href="https://www.linkedin.com/in/ingrid-olea/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://twitter.com/ingridelena/"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://github.com/ingridolea"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="assets/files/Olea_Ingrid_Resume_250120.pdf"><i class="fas fa-file-pdf"></i></a>
                         <a class="social-icon" href="mailto:ingrid_olea@hks.harvard.edu"><i class="fas fa-envelope"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
             <hr class="m-0" />
+            
+            <section class="resume-section" id="masinfo">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Interests</h2>
+                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                </div>
+            </section>
+
+            <section class="resume-section" id="lettering">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Interests</h2>
+                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                </div>
+            </section>
+
+            <section class="resume-section" id="english">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Interests</h2>
+                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                </div>
+            </section>
+
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
