--- a/index.html
+++ b/index.html
@@ -47,18 +47,30 @@
                     </div>
                     -->
                     <p class="lead mb-5">I'm an engineer, math teacher and public servant, working at the intersection of education, public policy and technology, to expand opportunities for all children. I'm graduating from the Harvard Kennedy School in May 2020 and searching for my next destination.</p>
-                    <div class="social-icons"
+                    <div class="social-icons">
+                        
                         <a class="social-icon" href="https://www.linkedin.com/in/ingrid-olea/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://twitter.com/ingridelena/"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="https://github.com/ingridolea"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="assets/files/Olea_Ingrid_Resume_250120.pdf"><i class="fas fa-file-pdf"></i></a>
                         <a class="social-icon" href="mailto:ingrid_olea@hks.harvard.edu"><i class="fas fa-envelope"></i></a>
+
                     </div>
                 </div>
             </section>
             <hr class="m-0" />
             
             <section class="resume-section" id="masinfo">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Interests</h2>
+                    <p>I was once going to become an IT engineer until I discovered the transformative power of education. Working as a teacher, I learned of the great impact a good education could have in my students’ life, but also became aware of the many challenges that schools and communities have to actually deliver on the promise of quality education. In my work in the Ministry of Education, I learned that public policy can address those challenges, but there’s still a big gap between the design and implementation, and I worked towards starting to bridge that gap. I am part of international communities that have taught me that the struggles I saw in Chile are not that different than those around the world in this matter, and a global perspective and collaborative spirit are necessary, if we want all our children to live up to their potential.</p>
+                    <p>I am now in the last semester of the Master in Public Administration at the Harvard Kennedy School, where I have studied leadership, management, negotiation, education policy and technology to discover how all of them can come together to better address the challenges countries face, in their mission to provide quality education. I am looking for a job where I can contribute to this with my experience, skills, knowledge and passion.</p>
+                    <p>In my free time I like to dance, especially Latin music, watching makeup tutorials and practice lettering (the art of drawing letters).</p>
+                    <p>You can check my entire resume here, or contact me directly.</p>
+                </div>
+            </section>
+
+            <section class="resume-section" id="english">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
@@ -74,13 +86,7 @@
                 </div>
             </section>
 
-            <section class="resume-section" id="english">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
-                </div>
-            </section>
+
 
             <!-- Experience-->
             <section class="resume-section" id="experience">
