--- a/index.html
+++ b/index.html
@@ -40,13 +40,7 @@
                     <h1 class="mb-0">
                         <span class="text-primary"> Ingrid Olea</span>
                     </h1>
-                    <!--
-                    <div class="subheading mb-5">
-                        I'm an engineer, math teacher and public servant, working at the intersection of education, public policy and technology ·
-                        <a href="mailto:ingrid_olea@hks.harvard.edu">ingrid_olea@hks.harvard.edu</a>
-                    </div>
-                    -->
-                    <p class="lead mb-5">I'm an engineer, math teacher and public servant, working at the intersection of education, public policy and technology, to expand opportunities for all children. I'm graduating from the Harvard Kennedy School in May 2020 and searching for my next destination.</p>
+                    <p class="lead mb-5">Soy ingeniera civil, profesora y servidora pública, trabajando donde se intersectan la educación, las políticas públicas y la tecnología, para abrir oportunidades para todxs los niñxs. Actualmente soy parte del equipo de <a href="http://globalteachinginsights.org/">Global Teaching Insights</a> en <a href="http://www.oecd.org/education/">la división de educación de la OCDE</a>.</p>
                     <div class="social-icons">
                         
                         <a class="social-icon" href="https://www.linkedin.com/in/ingrid-olea/"><i class="fab fa-linkedin-in"></i></a>
@@ -62,8 +56,13 @@
             
             <section class="resume-section" id="masinfo">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>I was once going to become an IT engineer until I discovered the transformative power of education. Working as a teacher, I learned of the great impact a good education could have in my students’ life, but also became aware of the many challenges that schools and communities have to actually deliver on the promise of quality education. In my work in the Ministry of Education, I learned that public policy can address those challenges, but there’s still a big gap between the design and implementation, and I worked towards starting to bridge that gap. I am part of international communities that have taught me that the struggles I saw in Chile are not that different than those around the world in this matter, and a global perspective and collaborative spirit are necessary, if we want all our children to live up to their potential.</p>
+                    <h2 class="mb-5">Más información</h2>
+                    <p>Iba en camino a convertirme en ingeniera, pero tomé un camino distinto: estudié además pedagogía, y haciendo clases me convencí del impacto que tiene una buena educación en la vida de los estudiantes. Al mismo tiempo, fui testigo de los desafíos que las escuelas y comunidades tienen para efectivamente entregar la promesa de educación de calidad. </p>
+                    <p>En mi paso por el Ministerio de Educación, aprendí que las políticas públicas tienen el potencial de atender esos desafíos, pero también vi la gran brecha que existe entre el diseño y la implementación, lo cual </p>
+
+
+
+                    In my work in the Ministry of Education, I learned that public policy can address those challenges, but there’s still a big gap between the design and implementation, and I worked towards starting to bridge that gap. I am part of international communities that have taught me that the struggles I saw in Chile are not that different than those around the world in this matter, and a global perspective and collaborative spirit are necessary, if we want all our children to live up to their potential.</p>
                     <p>I am now in the last semester of the Master in Public Administration at the Harvard Kennedy School, where I have studied leadership, management, negotiation, education policy and technology to discover how all of them can come together to better address the challenges countries face, in their mission to provide quality education. I am looking for a job where I can contribute to this with my experience, skills, knowledge and passion.</p>
                     <p>In my free time I like to dance, especially Latin music, watching makeup tutorials and practice lettering (the art of drawing letters).</p>
                     <p>You can check my entire resume here, or contact me directly.</p>
@@ -72,9 +71,12 @@
 
             <section class="resume-section" id="english">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <h2 class="mb-5">Hello! I'm Ingrid</h2>
+                    <p class="lead mb-5">I'm an engineer, math teacher and public servant, working at the intersection of education, public policy and technology, to expand opportunities for all children. I'm currently part of the <a href="http://globalteachinginsights.org/">Global Teaching Insights</a> team, in the <a href="http://www.oecd.org/education/">education division of the OECD</a>.</p>
+                    <p>I was once going to become an IT engineer until I discovered the transformative power of education. Working as a teacher, I learned of the great impact a good education could have in my students’ life, but also became aware of the many challenges that schools and communities have to actually deliver on the promise of quality education. In my work in the Ministry of Education, I learned that public policy can address those challenges, but there’s still a big gap between the design and implementation, and I worked towards starting to bridge that gap. I am part of international communities that have taught me that the struggles I saw in Chile are not that different than those around the world in this matter, and a global perspective and collaborative spirit are necessary, if we want all our children to live up to their potential.</p>
+                    <p>I am now in the last semester of the Master in Public Administration at the Harvard Kennedy School, where I have studied leadership, management, negotiation, education policy and technology to discover how all of them can come together to better address the challenges countries face, in their mission to provide quality education. I am looking for a job where I can contribute to this with my experience, skills, knowledge and passion.</p>
+                    <p>In my free time I like to dance, especially Latin music, watching makeup tutorials and practice lettering (the art of drawing letters).</p>
+                    <p>You can check my entire resume here, or contact me directly.</p>
                 </div>
             </section>
 
