--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
 
 
-    
+
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
@@ -42,9 +42,9 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        <span class="text-primary"> Ingrid Olea</span>
+                        <span class="text-primary">Ingrid Olea</span>
                     </h1>
-                    <p class="lead mb-5">Soy ingeniera civil, profesora y servidora pública, trabajando donde se intersectan la educación, las políticas públicas y la tecnología, para abrir oportunidades para todxs los niñxs. Actualmente soy parte del equipo de <a href="http://globalteachinginsights.org/">Global Teaching Insights</a> en <a href="http://www.oecd.org/education/">la división de educación de la OCDE</a>.</p>
+                    <p class="lead mb-5">Soy ingeniera civil, profesora y servidora pública, trabajando donde se intersectan la educación, las políticas públicas y la tecnología, para abrir oportunidades para todos las niñas y niños. Actualmente soy parte del equipo de <a href="http://globalteachinginsights.org/">Global Teaching Insights</a> en <a href="http://www.oecd.org/education/">la división de educación de la OCDE</a>.</p>
                     <div class="social-icons">
                         
                         <a class="social-icon" href="https://www.linkedin.com/in/ingrid-olea/"><i class="fab fa-linkedin-in"></i></a>
