--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <p>En mi paso por el Ministerio de Educación, aprendí que las políticas públicas tienen el potencial de atender esos desafíos, pero también vi la gran brecha que existe entre el diseño y la implementación y trabajé precisamente en la tarea de tratar de acortar esa brecha.</p>
                     <p>En las comunidades internacionales de las que soy parte, he visto cómo los problemas de que enfrenta mi país y su sistema educacional no son tan diferentes a los del resto del mundo, y he aprendido el valor de la perspectiva global y espíritu colaborativo para que no solo en Chile, sino en todo el mundo, las niñas y niños alcancen su potencial.</p>
                     <p>Ahora, ya graduada de un master en políticas públicas, trabajo en el proyecto <a href="http://globalteachinginsights.org/">Global Teaching Insights</a> de la OCDE, que tiene por objetivo visibilizar las buenas prácticas docentes y compartirlas con el mundo.</p>
-                    <p>En mi tiempo libre me gusta bailar, especialmente la música latina, ver tutoriales de maquillaje y practicar lettering (el arte de dibujar letras).</p>
+                    <p>En mi tiempo libre me gusta bailar, especialmente la música latina, ver tutoriales de maquillaje y practicar <a href="#lettering">lettering</a> (el arte de dibujar letras).</p>
                     <p>Puedes bajar mi CV <a href="assets/files/Olea_Ingrid_CV_131020es">aquí</a>, o <a href="mailto:ingrid_olea@hks.harvard.edu">escribirme!</a>.</p>
                 </div>
             </section>
@@ -76,7 +76,7 @@
                     <p>I was once going to become an IT engineer until I discovered the transformative power of education. Working as a teacher, I learned of the great impact a good education could have in my students’ life, but also became aware of the many challenges that schools and communities have to actually deliver on the promise of quality education. In my work in the Ministry of Education, I learned that public policy can address those challenges, but there’s still a big gap between the design and implementation, and I worked towards starting to bridge that gap. I am part of international communities that have taught me that the struggles I saw in Chile are not that different than those around the world in this matter, and a global perspective and collaborative spirit are necessary, if we want all our children to live up to their potential.</p>
                     
                     <p>Now that I graduated from a master in public policy, I'm working in the <a href="http://globalteachinginsights.org/">Global Teaching Insights</a> project from the OECD, an initiative that aims to make quality teaching practices from around the world visible through classroom videos in a digital platform. </p>
-                    <p>In my free time I like to dance, especially Latin music, watching makeup tutorials and practice lettering (the art of drawing letters).</p>
+                    <p>In my free time I like to dance, especially Latin music, watching makeup tutorials and practice <a href="#lettering">lettering</a> (the art of drawing letters).</p>
                     <p>You can check my entire resume <a href="assets/files/Olea_Ingrid_Resume_130920en">here</a>, or <a href="mailto:ingrid_olea@hks.harvard.edu">contact me directly</a> .</p>
                     
                     <div class="social-icons">
