--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
                     <h1 class="mb-0">
                         <span class="text-primary">Ingrid Olea</span>
                     </h1>
-                    <p class="lead mb-5">Soy ingeniera civil, profesora y servidora pública, trabajando donde se intersectan la educación, las políticas públicas y la tecnología, para abrir oportunidades para todos las niñas y niños. Actualmente soy parte del equipo de <a href="http://globalteachinginsights.org/">Global Teaching Insights</a> en <a href="http://www.oecd.org/education/">la división de educación de la OCDE</a>.</p>
+                    <p class="lead mb-5">
+                    Soy ingeniera civil, profesora y Máster en Políticas Públicas, trabajando en la mejora de las trayectorias educativas de niñas, niños, jóvenes y adultos, y fortaleciendo la educación pública de la comuna de Maipú, Santiago de Chile. Con diversa experiencia en el mundo educativo: en aula, en el Ejecutivo, organismos internacionales y municipal.
+                    </p>
                     <div class="social-icons">
                         
                         <a class="social-icon" href="https://www.linkedin.com/in/ingridolea/"><i class="fab fa-linkedin-in"></i></a>
