--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <span class="text-primary">Ingrid Olea</span>
                     </h1>
                     <p class="lead mb-5">
-                    Soy ingeniera civil, profesora y Máster en Políticas Públicas, trabajando en la protección de los derechos de los niños, niñas y adolscentes de Chile. Tengo experiencia en el diseño, implementación y evaluación de políticas públicas para la infancia y juventud, desde salas de clases, Ejecutivo, Municipios y organismos internacionales. 
+                    Soy ingeniera civil, profesora y Máster en Políticas Públicas, trabajando en la protección de los derechos de los niños, niñas y adolescentes de Chile. Tengo experiencia en el diseño, implementación y evaluación de políticas públicas para la infancia y juventud, desde salas de clases, Ejecutivo, Municipios y organismos internacionales. 
                     </p>
                     <div class="social-icons">
                         
